--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://eeoneishin.github.io/ToDo_APP/",
   "name": "react-typescript-starter-pack",
   "version": "0.1.0",
   "dependencies": {
